gl33-master/src/test/deca/context/valid/others/declclass.deca
class Hello {

    int a = 2;
    protected boolean b;

    void bonjour(boolean a) {
        println("hello");
    }
}


{
    println("ok");
}