gl33-master/src/test/deca/context/invalid/other/ifthenelse_fausse_int.deca
// Invalid
// ifthenelse fausse (int comme entree)

{
    int n = 2;

    if(n){
        println("non");
    }
}
